language/move-lang/tests/move_check/expansion/standalone_fields.exp
error: 

   ┌── tests/move_check/expansion/standalone_fields.move:3:9 ───
   │
 3 │         {f: 1, g: 0};
   │         ^^^^^^^^^^^^ Unexpected field arguments. Fields are used only to instantiate a struct
   │

