language/move-lang/tests/move_check/expansion/standalone_fields.move
module M {
    fun foo() {
        {f: 1, g: 0};
    }
}
